Utilise network Docker « mss-network »
Dans le cadre de la cohabitation avec mss, on veut un network nommé et 'external'.
Pour que les conteneurs de mss-journal utilisent le même.

--- a/.env.template
+++ b/.env.template
@@ -1,1 +1,1 @@
-URL_SERVEUR_BASE_DONNEES= # URL du serveur de base de données, ex. postgres://user@db/mss-journal
+URL_SERVEUR_BASE_DONNEES= # URL du serveur de base de données, ex. postgres://user@mss-journal-db/mss-journal
