--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - /var/lib/postgresql/data
 
   metabase:
-    image: metabase/metabase
+    image: metabase/metabase:v0.51.3
     environment:
       - MB_DB_TYPE=postgres
       - MB_DB_DBNAME=mss-journal
