[SOIN] Passe à un node récent
... et ne joue que les migrations au démarrage du node.
Le script des proc. stock. doit être lancé à la main (car psql n'existe pas dans l'env node), cf. README.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,11 +30,11 @@ services:
 
   # https://github.com/nodejs/docker-node/blob/main/README.md#how-to-use-this-image
   node:
-    image: node:18.12.1 # Version LTS
+    image: node:22
     volumes:
       - ./:/home/node/app
     working_dir: /home/node/app
-    command: "./scripts/migrations.sh"
+    command: sh -c "npm ci && ./node_modules/.bin/knex migrate:latest"
     networks:
       - mss-network
     depends_on:
